[package]
name = "alembic"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
rayon = "1.10"
# wgpu migration (v0.3) — modern GPU stack with real compute shaders
# and storage buffers. winit for window/event loop.
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
# egui-wgpu UI (port of the macroquad sidebar / palette / tool panel)
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = { version = "0.31", default-features = false, features = ["links"] }

[[bin]]
name = "alembic"
path = "src/main.rs"

[[bin]]
name = "alembic-wgpu"
path = "src/wgpu_main.rs"

[dev-dependencies]
serial_test = "3.2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
